<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartQuizActivity" >

    <Button
        android:id="@+id/viewQuizButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startQuizButton"
        android:layout_below="@+id/startQuizButton"
        android:layout_marginTop="20dp"
        android:background="@drawable/button2"
        android:onClick="viewQuiz"
        android:text="@string/view_quiz"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/deleteQuizButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewQuizButton"
        android:layout_below="@+id/viewQuizButton"
        android:layout_marginTop="20dp"
        android:background="@drawable/button2"
        android:onClick="deleteQuiz"
        android:text="@string/delete_quiz"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/startQuizButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quizNameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="246dp"
        android:background="@drawable/button2"
        android:onClick="startQuiz"
        android:text="@string/start_quiz"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quizNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="158dp"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFD700"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/menuButton1"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="57dp"
        android:layout_toRightOf="@+id/startQuizButton"
        android:background="@drawable/button2"
        android:onClick="goToMenu"
        android:text="@string/menu"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

</RelativeLayout>