<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewProjectActivity" >

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quizTextView"
        android:layout_below="@+id/quizTextView"
        android:layout_marginTop="62dp"
        android:text="@string/answer"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/questionEditText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/quizTextView"
        android:layout_alignBottom="@+id/quizTextView"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/quizTextView"
        android:ems="10"
        android:inputType="text"
        android:textColor="#FFF" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/answerTextView"
        android:layout_alignLeft="@+id/questionEditText"
        android:ems="10"
        android:inputType="text"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/instructionTextView"
        android:layout_marginBottom="42dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/button2"
        android:onClick="nextQuestion"
        android:text="@string/next"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nextButton"
        android:layout_alignBottom="@+id/nextButton"
        android:layout_alignLeft="@+id/answerTextView"
        android:layout_marginLeft="45dp"
        android:background="@drawable/button2"
        android:onClick="createQuiz"
        android:text="@string/done"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/instructions"
        android:textColor="#C0C0C0"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quizTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/instructionTextView"
        android:layout_centerVertical="true"
        android:text="@string/question"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_above="@+id/questionEditText"
        android:layout_alignLeft="@+id/quizTextView"
        android:layout_alignRight="@+id/instructionTextView"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/menu"
        android:maxWidth="@dimen/activity_horizontal_margin"
        android:scaleType="fitXY"
        android:src="@drawable/divider" />

    <Button
        android:id="@+id/menuButton4"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button2"
        android:onClick="goToMenu"
        android:text="@string/menu"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

</RelativeLayout>