<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/viewProjectButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_below="@+id/newProjectButton2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/button2"
        android:minWidth="70dp"
        android:onClick="viewProject"
        android:text="@string/viewProject"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/newProjectButton2"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:background="@drawable/button2"
        android:minWidth="70dp"
        android:onClick="newProject"
        android:text="@string/newProject"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/newProjectButton2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:contentDescription="@string/appName"
        android:src="@drawable/title" />

</RelativeLayout>