<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redline"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuizActivity" >

    <TextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/incorrectButton"
        android:layout_marginTop="7dp"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/quizScrollView"
        android:layout_width="500dp"
        android:layout_height="550dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="70dp" >

        <TextView
            android:id="@+id/quizTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/question"
            android:textSize="@dimen/text_size" />

    </ScrollView>

    <Button
        android:id="@+id/incorrectButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="330dp"
        android:background="@drawable/button2"
        android:onClick="incorrectButton"
        android:text="@string/menu"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/correctButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/incorrectButton"
        android:layout_alignBottom="@+id/incorrectButton"
        android:layout_marginLeft="110dp"
        android:background="@drawable/button2"
        android:onClick="correctButton"
        android:text="@string/see_answer"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/stateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quizScrollView"
        android:layout_below="@+id/questionNumberTextView"
        android:layout_marginLeft="5dp"
        android:text="@string/question"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>