<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewProjectActivity" >

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp" >

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="300dp"
            android:layout_height="540dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="135dp" >

            <TableLayout
                android:id="@+id/buttonTableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="0dp" >
            </TableLayout>
        </ScrollView>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/allProjectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/horizontalScrollView1"
        android:layout_below="@+id/newProjectButton2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/allProjects"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFD700"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newProjectButton2"
        style="@drawable/button2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/horizontalScrollView1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button2"
        android:onClick="goToNewProject"
        android:text="@string/newProject"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/newProjectButton2"
        android:layout_alignBottom="@+id/newProjectButton2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:background="@drawable/button2"
        android:onClick="goToMenu"
        android:text="@string/menu"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/deleteAllButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/menuButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="43dp"
        android:background="@drawable/button2"
        android:onClick="deleteAll"
        android:text="@string/delete_all"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size" />

</RelativeLayout>